# snakesss

./: .gitignore  .pre-commit-config.yaml  Dockerfile.dev  Dockerfile.lambda  Makefile  Pipfile  conf.py  docker-compose.yml  main.py  pyproject.toml  rag_agent.py  requirements.txt  service.dockerfile  setup.py
_scratchpad/: distance_matrix.py  download_images.py  enums.py  fibonacci.py  ideas_formatter.py  note_synthesis.py
cli/: __init__.py  crawler.py  csv_to_sqlite.py  download_flux.py  main.py  nexus.py  notes_etl.py  process_markdown.py  writer.py
cli/calculations/: distance_matrix.py  fibonacci.py  rate_of_return.py
cli/crawlers/: job_post.py  main.py  utils.py  zillow.py
cli/finance/: main.py  starling_bank.py
cli/notes/: notes_cli.py
cli/server/: main.py  server.py
cli/server/routers/: chat_router.py  crew_router.py  scraper_router.py  task_router.py  tool_router.py
cli/server/routers/media/: audio_router.py  vision_router.py
cli/user_story/: user_story_advanced.py  user_story_basic.py  user_story_generator.py
data/: SaveImageInfo.mutation.graphql  SearchImages.query.graphql  industries.py
lib/: auth.py  distance_matrix.py  file_service.py  find_matches.py  images.py  nlp-calendar-event.py  notes-analyzer.py
lib/clients/: anthropic.py  chromadb_service.py  llama.py  ollama.py  openai.py  s3.py
lib/costs/: __init__.py  token_costs.py
lib/dates/: hotdate.py  nlp_calendar_event.py  test_hotdate.py  test_nlp_calendar_event.py
lib/documents/: emails.py
lib/generate/: flux.py
lib/generation_statistics/: __init__.py  generation_statistics.py  test_generation_statistics.py
lib/profile_matching/: fetch_embeddings.py  find_matches.py
lib/prompts/: candidate_email_parser.txt  candidate_email_parser_bio.txt  writing_assistant.md
lib/repositories/: file_repository.py
lib/schemas/: candidates.py
lib/scrapers/: __init__.py  zillow_scraper.py
lib/writing/: app.py  utils.py
lib/writing/tests/: test_utils.py
prompts/: writer.md
routers/: email_parser.py  hollywood.py  ollama.py
routers/media/: vision_router.py
src/: server.py
src/prompts/: sherpa_base.md  user_story.md  writer.md
src/routers/: ai_router.py  chat_router.py  crew_router.py  graphql.py  hollywood.py  media_router.py  ollama.py  tool_router.py
src/routers/documents/: emails.py
src/routers/focus/: focus_router.py  focus_service.py  user_input_formatter.md
src/routers/media/: audio_router.py  vision.py  vision_router.py
src/routers/user_intent/: __init__.py  user_intent_models.py  user_intent_prompt.md  user_intent_prompt_openai.md  user_intent_router.py  user_intent_tools.py
src/schemas/: mutation.py  query.py  types.py
src/services/: ai_service.py  auth.py  chromadb_service.py  images.py  notebooks.py
src/snakesss/: __init__.py
