[project]
name = "snakesss"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb",
    "crawl4ai>=0.4.247",
    "crewai[tools]>=0.86.0",
    "freezegun>=1.5.1",
    "langchain-chroma>=0.1.2",
    "langchain-community>=0.2.16",
    "langchain-ollama>=0.2.2",
    "langchain-openai>=0.1.23",
    "langchain>=0.2.16",
    "langgraph>=0.2.19",
    "ollama>=0.4.7",
    "openai",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pre-commit>=3.8.0",
    "pydantic-ai>=0.0.0",
    "pydantic-settings>=2.5.2",
    "pytest>=8.3.3",
    "python-dotenv",
    "python-multipart>=0.0.17",
    "pytz>=2024.2",
    "ruff>=0.6.4",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "spacy>=3.7.5",
    "tqdm>=4.64.1",
    "typer>=0.12.5",
    "uvicorn",
    "markdown>=3.7",
]

[project.optional-dependencies]
dev = [
    "pip>=24.3.1",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "ruff>=0.6.4",
]

[project.scripts]
snakesss = "cli.main:app"
notes = "cli.notes.notes_cli:notes_app"
user-story = "cli.user_story.user_story_generator:user_story_app"
crawler = "cli.crawler:app"
fibonacci = "cli.calculations.fibonacci:app"
distance-matrix = "cli.calculations.distance_matrix:app"
csv-to-sqlite = "cli.csv_to_sqlite:csv_to_sqlite"

[tool.hatch.build.targets.wheel]
packages = ["cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [
    "**/__pycache__", # cache directories
    "./typings",      # generated type stubs
]
stubPath = "./typings"

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = ["/usr/lib/*"]

[tool.ruff.lint]
ignore = [
    "E501", # line too long - will be fixed in format
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true
known-local-folder = ["src"]
known-first-party = ["flux"]
